Removed "unknown" from list of entities (#58), added config options to keep the rainbow formatting and support for disabling translatable text (#56, #57)